--- a/index1.html
+++ b/index1.html
@@ -12,9 +12,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+
     <title>LowCarbON</title>
 </head>
 <body>
+
+
+<!-- NAVBAR -->
+
+
     <header class="header">
         <a href="#" class="logo">
             <img src="assets/images/logocompleto.png" class ="logo" alt="logo">
@@ -32,6 +39,11 @@
     </header>
 
 
+
+
+<!-- PAGINA INICIAL -->
+
+
     <section class="home" id="home">
         <div class="content">
             <h3>Nosso trabalho é realizar um controle sobre a sua emissão de carbono no mundo</h3>
@@ -44,6 +56,10 @@
             <img src="/assets/images/sidebarlogo.png" alt="">
         </div>
     </section>
+
+
+
+<!-- SOBRENOS -->
 
 
     <section class="about" id="about">
@@ -62,7 +78,7 @@
         </div>
 
     </section>
-
+<!-- PEGADA DE Carbono -->
     <section class="carbon" id="carbon">
         <h1 class="heading"> Pegada de Carbono</h1>
         <div class="row">
@@ -78,6 +94,36 @@
         </div>
 
     </section>
+
+
+
+<!-- Contato -->
+
+
+    <section class="contact" id="contact">
+        <h1 class="heading"> <span>Fale</span>  Conosco </h1>
+        <div class="row">
+            <iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.7848146083275!2d-46.57688468923638!3d-23.647876178651746!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce434992a4cad7%3A0x75aa65b7b5099c2!2sInstituto%20Mau%C3%A1%20de%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1682690074458!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <form action="">
+                <h3>Entre em contato com a gente</h3>
+            <div class="inputBox">
+                <span class="fas fa-user"></span>
+                <input type="text" placeholder="Nome">
+            </div>
+            <div class="inputBox">
+                <span class="fas fa-envelope"></span>
+                <input type="email" placeholder="00.00000-0@maua.br">
+            </div>
+            <div class="inputBox">
+                <span class="fas fa-phone"></span>
+                <input type="tel" placeholder="(00)00000-0000" onkeypress="$(this).mask('(00) 00000-0000')">
+            </div>
+            <input type="submit" value="Contate-nos agora" class="submit">
+        </form>
+    </div>
+    </section>
+        
+
 
     <script src="script1.js"></script>
 </body>
