--- a/index1.html
+++ b/index1.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
 
     <title>LowCarbON</title>
@@ -116,7 +117,7 @@
             </div>
             <div class="inputBox">
                 <span class="fas fa-phone"></span>
-                <input type="tel" placeholder="(00)00000-0000" onkeypress="$(this).mask('(00) 00000-0000')">
+                <input type="text" placeholder="(00)00000-0000" onkeypress="$(this).mask('(00) 00000-0000')">
             </div>
             <input type="submit" value="Contate-nos agora" class="submit">
         </form>
