--- a/index1.html
+++ b/index1.html
@@ -68,7 +68,7 @@
         <div class="row">
 
             <div class="image">
-                <img src="/assets/images/plantando.webp" alt="">
+                <img src="/assets/images/muitacriancasuja.webp" alt="">
             </div>
             <div class="content">
                 <h3>Qual o objetivo do LowCarbON?</h3>
@@ -124,6 +124,25 @@
     </div>
     </section>
         
+<!-- Rodape     -->
+
+    <section class="footer">
+        <div class="share">
+            <a href="" class="fab fa-facebook-f"></a>
+            <a href="" class="fab fa-twitter"></a>  
+            <a href="" class="fab fa-instagram"></a>
+        </div>
+
+        <div class="links">
+            <a href="#home">Pagina Inicial</a>
+            <a href="#about">Sobre nós</a>
+            <a href="#carbon">Pegadada de Carbono</a>
+            <a href="#contatof">Contato</a>
+        </div>
+
+        <div class="credit">Todos os direitos reservados &COPY;</div>
+
+    </section>
 
 
     <script src="script1.js"></script>
