--- a/index1.html
+++ b/index1.html
@@ -32,8 +32,12 @@
             <a href="#about">Sobre nós</a>
             <a href="#carbon"> Pegada de Carbono</a>
             <a href="#contact">Contato</a>
-            <a href="#">Meu Perfil</a>
-        </nav> 
+            <a href="#">Meu Perfil <i class="bi bi-caret-down-fill"></i></a>
+                <ul>
+                    <li><a href="#"></a></li>
+                </ul>
+        </nav>
+
         <div class="icons">
             <div class="fas fa-bars" id="menu-btn"></div>
         </div>
