pagina veja veja_mais

--- a/index1.html
+++ b/index1.html
@@ -78,7 +78,7 @@
                 <h3>Qual o objetivo do LowCarbON?</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus tempora magni corporis quo cum voluptates rem minima neque eveniet quaerat.</p>
                 <p>Lorem ipsum dolor sit amet.</p>
-                <a href="#" class="button">Veja mais</a>
+                <a href="sobre_nos.html" class="button">Veja mais</a>
             </div>
         </div>
 
