--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -27,11 +27,11 @@
             <img src="assets/images/logocompleto.png" class ="logo" alt="logo">
         </a>
         <nav class="navbar">
-            <a href="#home">Página Inicial</a>
-            <a href="#about">Sobre nós</a>
-            <a href="#carbon"> Pegada de Carbono</a>
-            <a href="#contact">Contato</a>
-            <a href="#">Meu Perfil<i class="bi bi-caret-down-fill"></i></a>
+            <a href="index1.html">Página Inicial</a>
+            <a href="index1.html">Sobre nós</a>
+            <a href="index1.html"> Pegada de Carbono</a>
+            <a href="index1.html">Contato</a>
+            <a href="index1.html">Meu Perfil<i class="bi bi-caret-down-fill"></i></a>
                 <ul>
                     <li><a href="#"></a></li>
                 </ul>
