--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/styles1.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/x-icon" href="/assets/images/icone-removebg-preview.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -32,10 +33,7 @@
             <a href="#about">Sobre nós</a>
             <a href="#carbon"> Pegada de Carbono</a>
             <a href="#contact">Contato</a>
-            <a href="#">Meu Perfil<i class="bi bi-caret-down-fill"></i></a>
-                <ul>
-                    <li><a href="#"></a></li>
-                </ul>
+            <a href="#">Meu Perfil</a>
         </nav>
 
         <div class="icons">
