--- a/index1.html
+++ b/index1.html
@@ -33,7 +33,7 @@
             <a href="#about">Sobre nós</a>
             <a href="#carbon"> Pegada de Carbono</a>
             <a href="#contact">Contato</a>
-            <a href="#">Meu Perfil</a>
+            <a href="meu_perfil.html">Meu Perfil</a>
         </nav>
 
         <div class="icons">
