--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -43,20 +43,24 @@
     </header>
 
     <!--Página veja mais-->
-
-    <div class="escrita">
-        <h3> Bem-vindo ao nosso site de cálculo de pegada de carbono! Somos um grupo de quatro estudantes universitários do Instituto Mauá de Tecnologia 
+    <section class="home">
+        
+    </section>
+        <div class="escrita">
+            <h1> <span>SAIBA</span> MAIS</h1>
+            <h3> Bem-vindo ao nosso site de cálculo de pegada de carbono! Somos um grupo de quatro estudantes universitários do Instituto Mauá de Tecnologia 
             que estão empenhados em ajudar as pessoas a reduzir sua pegada de carbono e fazer a sua parte para proteger o planeta.
             Nosso objetivo é educar e conscientizar as pessoas sobre as emissões de gases do efeito estufa e o impacto que elas têm 
             no meio ambiente. Sabemos que a maioria das pessoas não tem ideia de quanta emissão de carbono é produzida em suas vidas 
             cotidianas, desde a energia que usam em suas casas até as viagens que fazem diariamente. 
             É por isso que criamos esta ferramenta fácil de usar que ajuda as pessoas a entender e gerenciar sua pegada de carbono.
-            Nossa equipe é formada por estudantes de engenharia ambiental, tecnologia da informação e administração. Juntos, trazemos 
-            uma variedade de habilidades e conhecimentos para tornar esta plataforma uma realidade. Investimos muito tempo e esforço para criar uma
-             ferramenta simples, mas eficaz, que permite que qualquer pessoa calcule sua pegada de carbono rapidamente e facilmente.
+            Nossa equipe é formada por estudantes de Sistemas da informação. Juntos, trazemos 
+            uma variedade de habilidades e conhecimentos para tornar esta plataforma uma realidade. Investimos muito tempo e esforço para criar uma 
+            ferramenta simples, mas eficaz, que permite que qualquer pessoa calcule sua pegada de carbono rapidamente e facilmente.
             Estamos constantemente atualizando e melhorando nossa plataforma para fornecer a você a melhor experiência possível. 
             Além disso, também oferecemos conselhos e dicas práticas para ajudá-lo a reduzir sua pegada
              de carbono e proteger o meio ambiente. Nosso objetivo final é criar um futuro mais sustentável e saudável para todos.
             Obrigado por escolher nossa plataforma para ajudá-lo a medir sua pegada de carbono. Juntos, podemos trabalhar para reduzir 
             nossas emissões e criar um mundo mais verde e saudável para as gerações futuras.</h3>
-    </div>
+        </div>
+
