--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/styles1.css">
-    <link rel="stylesheet" href="assets/css/veja_mais.css">
+    <link rel="stylesheet" href="assets/css/sobre_nos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,12 +31,7 @@
             <a href="index1.html">Sobre nós</a>
             <a href="index1.html"> Pegada de Carbono</a>
             <a href="index1.html">Contato</a>
-            <a href="index1.html">Meu Perfil<i class="bi bi-caret-down-fill"></i></a>
-                <ul>
-                    <li><a href="#"></a></li>
-                </ul>
-        </nav>
-
+            <a href="meu_perfil.html">Meu Perfil</a>
         <div class="icons">
             <div class="fas fa-bars" id="menu-btn"></div>
         </div>
