--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -7,10 +7,10 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/styles1.css">
     <link rel="stylesheet" href="assets/css/sobre_nos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="icon" type="image/x-icon" href="/assets/images/icone-removebg-preview.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
@@ -32,6 +32,7 @@
             <a href="index1.html"> Pegada de Carbono</a>
             <a href="index1.html">Contato</a>
             <a href="meu_perfil.html">Meu Perfil</a>
+        </nav>    
         <div class="icons">
             <div class="fas fa-bars" id="menu-btn"></div>
         </div>
@@ -59,3 +60,6 @@
             nossas emissões e criar um mundo mais verde e saudável para as gerações futuras.</h3>
         </div>
 
+
+    <script src="script1.js"></script>    
+</body>
