--- a/index1.html
+++ b/index1.html
@@ -74,8 +74,8 @@
             </div>
             <div class="content">
                 <h3>Qual o objetivo do LowCarbON?</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus tempora magni corporis quo cum voluptates rem minima neque eveniet quaerat.</p>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>O propósito é, através dos cálculos realizados pela nossa plataforma, podermos tentar realizar uma diminuição na emissão de gases de carbono.</p>
+                <p>Os cálculos apresentados por cada usuário poderá ser visto como formas de tentar mudar os hábitos cotidianos e, com isso, ajudará todo o ambiente que habitamos.</p>
                 <a href="sobre_nos.html" class="button">Veja mais</a>
             </div>
         </div>
