--- a/index1.html
+++ b/index1.html
@@ -139,7 +139,7 @@
             <a href="#home">Pagina Inicial</a>
             <a href="#about">Sobre nós</a>
             <a href="#carbon">Pegadada de Carbono</a>
-            <a href="#contatof">Contato</a>
+            <a href="meu_perfil.html">Meu perfil</a>
         </div>
 
         <div class="credit">Todos os direitos reservados &COPY;</div>
