--- a/index1.html
+++ b/index1.html
@@ -52,7 +52,7 @@
             <h3>Nosso trabalho é realizar um controle sobre a sua emissão de carbono no mundo</h3>
             <p>Nosso objetivo é calcular a quantidade de carbono que cada pessoa emite a partir do tempo de uso de eletrônicos e o meio de transporte utilizado. </p>
             <div>
-                <a href="#" id="botao" class="btn">Calcule aqui o seu!</a>
+                <a href="forms.html" id="botao" class="btn">Calcule aqui o seu!</a>
             </div>
         </div>
         <div class="logocompleto">
