--- a/forms.html
+++ b/forms.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/forms.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,28 +20,51 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <title>Pegada de Carbono</title>
 </head>
+
 <body>
-  <form >
+    <form>
 
-    <fieldset>
-      <legend></legend>
+        <fieldset>
+            <legend></legend>
 
-      <div class="radio-wrapper">
-        <div>
-          <input type="radio" name="plan" id="plan1" value="plan1">
-          <label for="plan1">Standard</label>
-        </div>
-        <p>
-          5 TB of space ipsum dolor sit amet consectetur, adipisicing elit. sit amet consectetur, adipisicing elit.
-        </p>
-      </div>
+            <div>
+                <h1 class="subtitle">Quais meios de transporte você costuma utilizar no seu dia a dia?</h1>
+            </div>
+            <div class="radio-wrapper">
+                <div id="answer">
+                    <input type="radio" name="plan" id="plan1" value="plan1">
+                    <label for="plan1">Carro</label>
+                </div>
+            </div>
 
-      <div class="radio-wrapper">
-        <div>
-          <input type="radio" name="plan" id="plan2" value="plan2" checked>
-          <label for="plan2">Advanced</label>
-        </div>
-        <p>
-          As much space as you ipsum sit amet consectetur, adipisicing elit. sit amet consectetur, adipisicing elit. dolor sit amet consectetur, adipisicing elit.
-        </p>
-      </div>
+            <div class="radio-wrapper">
+                <div id="answer">
+                    <input type="radio" name="plan" id="plan1" value="plan1">
+                    <label for="plan1">Motocicleta</label>
+                </div>
+            </div>
+
+            <div class="radio-wrapper">
+                <div id="answer">
+                    <input type="radio" name="plan" id="plan1" value="plan1">
+                    <label for="plan1">Bicicleta</label>
+                </div>
+            </div>
+
+            <div class="radio-wrapper">
+                <div id="answer">
+                    <input type="radio" name="plan" id="plan1" value="plan1" checked>
+                    <label for="plan1">Ando a pé</label>
+                </div>
+            </div>
+            <div>
+                <button id="next">Avançar</button>
+            </div>
+
+        </fieldset>
+    </form>
+
+<script src="forms.js"></script>    
+</body>
+
+</html>
