--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,7 @@
 
     <header class="header">
         <a href="#" class="logo">
-            <img src="assets/images/logocompleto.png" class ="logo" alt="logo">
+            <img src="assets/images/logoverde.png" class ="logo" alt="logo">
         </a>
         <nav class="navbar">
             <a href="#home">Página Inicial</a>
