--- a/index1.html
+++ b/index1.html
@@ -74,8 +74,8 @@
             </div>
             <div class="content">
                 <h3>Qual o objetivo do LowCarbON?</h3>
-                <p>O propósito é, através dos cálculos realizados pela nossa plataforma, podermos tentar realizar uma diminuição na emissão de gases de carbono.</p>
-                <p>Os cálculos apresentados por cada usuário poderá ser visto como formas de tentar mudar os hábitos cotidianos e, com isso, ajudará todo o ambiente que habitamos.</p>
+                <p>O propósito é, através dos cálculos realizados pela nossa plataforma, tentarmos realizar uma diminuição na emissão de gases de carbono.</p>
+                <p>A partir da apresentação dos cálculos, o usuário poderá compreender o quanto ele contribui para a emissão de carbono. E asim, poderá mudar seu hábitos cotidianos, contribuindo para o bem do meio ambiente.</p>
                 <a href="sobre_nos.html" class="button">Veja mais</a>
             </div>
         </div>
@@ -83,7 +83,7 @@
     </section>
 <!-- PEGADA DE Carbono -->
     <section class="carbon" id="carbon">
-        <h1 class="heading"> Pegada de Carbono</h1>
+        <h1 class="heading"> <span> Pegada de </span> Carbono</h1>
         <div class="row">
 
             <div class="image">
@@ -91,7 +91,7 @@
             </div>
             <div class="content">
                 <h3>O que é a pegada de carbono?</h3>
-                <p>Uma pegada de carbono é o total de emissões de gases de efeito estufa causadas por um indivíduo, evento, organização, serviço, local ou produto, expresso em dióxido de carbono equivalente</p>
+                <p>Uma pegada de carbono é o total de emissões de gases do efeito estufa causadas por um indivíduo, evento, organização, serviço, local ou produto, expresso em dióxido de carbono equivalente</p>
                 <p>A pegada de carbono visa reduzir o impacto sobre o meio ambiente, reduzindo o aquecimento global e mitigando as mudanças climáticas, já a pegada ecológica considera todos os possíveis impactos no meio ambiente.</p>
             </div>
         </div>
