banco_de_dados_preparaçao

--- a/cadastro.html
+++ b/cadastro.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="title">Faça seu Cadastro</div>
         <div class="form">
-            <form action="connect.php" method="post">
+            <form>
                 <div class="user-details">
                     <div class="input-box">
                         <span class="details">Email</span>
@@ -36,13 +36,15 @@
                         <span class="details">Confirmar senha</span>
                         <input type="text" placeholder="Digite sua senha novamente" name ="confirm_password" required>
                     </div>
+                    <div class="button">
+                        <input type="submit" value="Cadastrar">
+                    </div>
                 </div>
-                <div class="button">
-                    <input type="submit" value="Criar Conta">
-                </div>
+                
             </form>
         </div>
     </div>
 
 </body>
+
 </html>
