--- a/question2.html
+++ b/question2.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/forms.css">
+    <link rel="stylesheet" href="assets/css/question2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" type="image/x-icon" href="/assets/images/icone-removebg-preview.png">
@@ -28,38 +28,37 @@
             <legend></legend>
 
             <div>
-                <h1 class="subtitle">Quais meios de transporte você costuma utilizar no seu dia a dia?</h1>
+                <h1 class="subtitle">Quantas pessoas moram com você?</h1>
             </div>
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Carro</label>
+                    <label for="plan1">Moro sozinho</label>
                 </div>
             </div>
 
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Motocicleta</label>
+                    <label for="plan1">2 pessoas</label>
                 </div>
             </div>
 
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Bicicleta</label>
+                    <label for="plan1">3 pessoas</label>
                 </div>
             </div>
 
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1" checked>
-                    <label for="plan1">Ando a pé</label>
+                    <label for="plan1">4 ou mais pessoas</label>
                 </div>
             </div>
-            
             <div>
-                <a href="question2.html"><button id="next">Avançar</button></a>
+                <button id="next">Avançar</button>
             </div>
 
         </fieldset>
