questoes_meu_perfil

--- a/question1.html
+++ b/question1.html
@@ -28,39 +28,39 @@
             <legend></legend>
 
             <div>
-                <h1 class="subtitle">Quais meios de transporte público você costuma utilizar?</h1>
+                <h1 class="subtitle">Quais meios de transporte você costuma utilizar no seu dia a dia?</h1>
             </div>
-            <div class="radio-wrapper">
-                <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Ônibus</label>
-                </div>
-            </div>
-
-            <div class="radio-wrapper">
-                <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Metrô</label>
-                </div>
-            </div>
-
-            <div class="radio-wrapper">
-                <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Trem</label>
-                </div>
-            </div>
-
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1" >
-                    <label for="plan1">Não utilizo transporte público</label>
+                    <label for="plan1">Carro</label>
+                </div>
+            </div>
+
+            <div class="radio-wrapper">
+                <div id="answer">
+                    <input type="radio" name="plan" id="plan1" value="plan1">
+                    <label for="plan1">Motocicleta</label>
+                </div>
+            </div>
+
+            <div class="radio-wrapper">
+                <div id="answer">
+                    <input type="radio" name="plan" id="plan1" value="plan1">
+                    <label for="plan1">Bicicleta</label>
+                </div>
+            </div>
+
+            <div class="radio-wrapper">
+                <div id="answer">
+                    <input type="radio" name="plan" id="plan1" value="plan1">
+                    <label for="plan1">Ando a pé</label>
                 </div>
             </div>
 
 
             <div id="next">
-                <a href="/question3.html"><input type="button" value="Avançar"></a>
+                <a href="/question2.html"><input type="button" value="Avançar"></a>
             </div>
 
         </fieldset>
