--- a/question3.html
+++ b/question3.html
@@ -28,39 +28,39 @@
             <legend></legend>
 
             <div>
-                <h1 class="subtitle">Quais meios de transporte público você costuma utilizar?</h1>
+                <h1 class="subtitle">Quantas horas por dia você utiliza o transporte individual/público?</h1>
             </div>
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Ônibus</label>
-                </div>
-            </div>
-
-            <div class="radio-wrapper">
-                <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Metrô</label>
-                </div>
-            </div>
-
-            <div class="radio-wrapper">
-                <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Trem</label>
+                    <label for="plan1">Menos de 1 hora</label>
                 </div>
             </div>
 
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1" >
-                    <label for="plan1">Não utilizo transporte público</label>
+                    <label for="plan1">1 a 2 horas</label>
+                </div>
+            </div>
+
+            <div class="radio-wrapper">
+                <div id="answer">
+                    <input type="radio" name="plan" id="plan1" value="plan1">
+                    <label for="plan1">2 a 3 horas</label>
+                </div>
+            </div>
+
+            <div class="radio-wrapper">
+                <div id="answer">
+                    <input type="radio" name="plan" id="plan1" value="plan1">
+                    <label for="plan1">3 ou mais horas</label>
                 </div>
             </div>
 
 
             <div id="next">
-                <a href="/question3.html"><input type="button" value="Avançar"></a>
+                <a href="/question4.html"><input type="button" value="Avançar"></a>
             </div>
 
         </fieldset>
