--- a/question5.html
+++ b/question5.html
@@ -28,39 +28,39 @@
             <legend></legend>
 
             <div>
-                <h1 class="subtitle">Quais meios de transporte público você costuma utilizar?</h1>
+                <h1 class="subtitle">Como você classifica sua dieta?</h1>
             </div>
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Ônibus</label>
+                    <label for="plan1">Alto consumo de carne</label>
                 </div>
             </div>
 
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Metrô</label>
+                    <label for="plan1">Médio consumo de carne</label>
                 </div>
             </div>
 
             <div class="radio-wrapper">
                 <div id="answer">
                     <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Trem</label>
+                    <label for="plan1">Baixo consumo de carne</label>
                 </div>
             </div>
 
             <div class="radio-wrapper">
                 <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1" >
-                    <label for="plan1">Não utilizo transporte público</label>
+                    <input type="radio" name="plan" id="plan1" value="plan1">
+                    <label for="plan1">Vegetariano(a)/Vegano(a)</label>
                 </div>
             </div>
 
 
             <div id="next">
-                <a href="/question3.html"><input type="button" value="Avançar"></a>
+                <a href="/resultado.html"><input type="button" value="Avançar"></a>
             </div>
 
         </fieldset>
