--- a/resultado.html
+++ b/resultado.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/questions.css">
+    <link rel="stylesheet" href="assets/css/resultado.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" type="image/x-icon" href="/assets/images/icone-removebg-preview.png">
@@ -27,40 +27,14 @@
         <fieldset>
             <legend></legend>
 
-            <div>
-                <h1 class="subtitle">Quais meios de transporte público você costuma utilizar?</h1>
-            </div>
-            <div class="radio-wrapper">
-                <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Ônibus</label>
-                </div>
+            <div class="title">
+                <h1>Sua emissão foi de: </h1>
             </div>
 
-            <div class="radio-wrapper">
-                <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Metrô</label>
-                </div>
-            </div>
+            <span>43,98kg de CO2</span>
 
-            <div class="radio-wrapper">
-                <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1">
-                    <label for="plan1">Trem</label>
-                </div>
-            </div>
-
-            <div class="radio-wrapper">
-                <div id="answer">
-                    <input type="radio" name="plan" id="plan1" value="plan1" >
-                    <label for="plan1">Não utilizo transporte público</label>
-                </div>
-            </div>
-
-
-            <div id="next">
-                <a href="/question3.html"><input type="button" value="Avançar"></a>
+            <div id="veja-mais">
+                <a href="/meu_perfil.html"><input type="button" value="Veja suas respostas aqui!"></a>
             </div>
 
         </fieldset>
@@ -70,3 +44,4 @@
 </body>
 
 </html>
+
