--- a/meu_perfil.html
+++ b/meu_perfil.html
@@ -65,7 +65,7 @@
             <div class="counter">
 
                 <div class="box">
-                    <span>Veiculo</span>
+                    <span>Veículo</span>
                     <h3>Carro</h3>
                 </div>
 
