--- a/question5.html
+++ b/question5.html
@@ -66,7 +66,7 @@
         </fieldset>
     </form>
 
-    <script src="forms.js"></script>
+    <script src="pegada.js"></script>
 </body>
 
 </html>
