--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -43,7 +43,7 @@
         
     </section>
         <div class="escrita">
-            <h1> <span>SAIBA</span> MAIS</h1>
+            <h1> <span>SOBRE</span> NÓS</h1>
             <h3> Bem-vindo ao nosso site de cálculo de pegada de carbono! Somos um grupo de quatro estudantes universitários do Instituto Mauá de Tecnologia 
             que estão empenhados em ajudar as pessoas a reduzir sua pegada de carbono e fazer a sua parte para proteger o planeta.
             Nosso objetivo é educar e conscientizar as pessoas sobre as emissões de gases do efeito estufa e o impacto que elas têm 
