--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/sobre_nos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,13 +21,14 @@
 
     <title>LowCarbON</title>
 </head>
+
 <body>
 
     <!--NAVBAR-->
 
     <header class="header">
         <a href="#" class="logo">
-            <img src="assets/images/logocompleto.png" class ="logo" alt="logo">
+            <img src="assets/images/logoverde.png" class="logo" alt="logo">
         </a>
         <nav class="navbar">
             <a href="index1.html">Página Inicial</a>
@@ -32,34 +36,37 @@
             <a href="index1.html"> Pegada de Carbono</a>
             <a href="index1.html">Contato</a>
             <a href="meu_perfil.html">Meu Perfil</a>
-        </nav>    
+        </nav>
         <div class="icons">
             <div class="fas fa-bars" id="menu-btn"></div>
         </div>
     </header>
 
     <!--Página veja mais-->
-    <section class="home">
-        
-    </section>
-        <div class="escrita">
-            <h1> <span>SOBRE</span> NÓS</h1>
-            <h3> Bem-vindo ao nosso site de cálculo de pegada de carbono! Somos um grupo de quatro estudantes universitários do Instituto Mauá de Tecnologia 
-            que estão empenhados em ajudar as pessoas a reduzir sua pegada de carbono e fazer a sua parte para proteger o planeta.
-            Nosso objetivo é educar e conscientizar as pessoas sobre as emissões de gases do efeito estufa e o impacto que elas têm 
-            no meio ambiente. Sabemos que a maioria das pessoas não tem ideia de quanta emissão de carbono é produzida em suas vidas 
-            cotidianas, desde a energia que usam em suas casas até as viagens que fazem diariamente. 
-            É por isso que criamos esta ferramenta fácil de usar que ajuda as pessoas a entender e gerenciar sua pegada de carbono.
-            Nossa equipe é formada por estudantes de Sistemas da informação. Juntos, trazemos 
-            uma variedade de habilidades e conhecimentos para tornar esta plataforma uma realidade. Investimos muito tempo e esforço para criar uma 
-            ferramenta simples, mas eficaz, que permite que qualquer pessoa calcule sua pegada de carbono rapidamente e facilmente.
-            Estamos constantemente atualizando e melhorando nossa plataforma para fornecer a você a melhor experiência possível. 
-            Além disso, também oferecemos conselhos e dicas práticas para ajudá-lo a reduzir sua pegada
-             de carbono e proteger o meio ambiente. Nosso objetivo final é criar um futuro mais sustentável e saudável para todos.
-            Obrigado por escolher nossa plataforma para ajudá-lo a medir sua pegada de carbono. Juntos, podemos trabalhar para reduzir 
-            nossas emissões e criar um mundo mais verde e saudável para as gerações futuras.</h3>
+
+    <div class="section">
+        <div class="container">
+            <div class="content-section">
+                <div class="title">
+                    <h1>SOBRE<span>NÓS</span></h1>
+                </div>
+                <div class="content">
+                    <h3>Bem-vindo ao nosso site de cálculo de pegada de carbono!</h3>
+                    <p>Somos quatro alunos do Instituto Mauá de Tecnologia criaram uma ferramenta fácil de usar para
+                        ajudar as
+                        pessoas a entender e gerenciar sua pegada de carbono. Seu objetivo é educar e aumentar a
+                        conscientização sobre as emissões de gases de efeito estufa e o impacto que eles causam no meio
+                        ambiente.</p>
+                    <div class="button">
+                        <a href="index1.html">Voltar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="image-section">
+                <img src="/assets/images/fotoparque1.jpg" alt="">
+            </div>
         </div>
+    </div>
 
-
-    <script src="script1.js"></script>    
+    <script src="script1.js"></script>
 </body>
