--- a/meu_perfil2.html
+++ b/meu_perfil2.html
@@ -35,6 +35,7 @@
             <ul>
                 <li><a href="#home">Página Inicial</a></li>
                 <li><a href="#about">Sobre Mim</a></li>
+                <li><a href="#actions">Reduza o seu impacto</a></li>
                 <li><a href="index1.html">Voltar</a></li>
                 <li><a href="landing_page.html">Sair da conta</a></li>
             </ul>
@@ -93,6 +94,18 @@
             </div>
 
         </div>
+
+    </section>
+
+    <section class="actions" id="actions">
+
+        <h1 class="heading"> <span>Reduza o seu</span> impacto </h1>
+            <ul>
+                <li>- Tente andar mais a pé ou utilizar outros transportes menos poluentes.</li>
+                <li>- Tente utilizar outros meios de transporte público. </li>
+                <li>- Opte por oferecer carona ou andar de carona. </li>
+            </ul>
+            <img src="assets/images/LowCarbON-verde-removebg.png" alt="logo">
 
     </section>
 
