--- a/sobre_nos.html
+++ b/sobre_nos.html
@@ -27,7 +27,7 @@
     <!--NAVBAR-->
 
     <header class="header">
-        <a href="#" class="logo">
+        <a href="/index1.html" class="logo">
             <img src="assets/images/logoverde.png" class="logo" alt="logo">
         </a>
         <nav class="navbar">
@@ -48,7 +48,7 @@
         <div class="container">
             <div class="content-section">
                 <div class="title">
-                    <h1>SOBRE<span>NÓS</span></h1>
+                    <h1>SOBRE<span> NÓS</span></h1>
                 </div>
                 <div class="content">
                     <h3>Bem-vindo ao nosso site de cálculo de pegada de carbono!</h3>
