--- a/tela_login.html
+++ b/tela_login.html
@@ -22,7 +22,7 @@
             <form action="#">
                 <div class="user-details">
                     <div class="input-box">
-                        <span class="details">Nome de usuário</span>
+                        <span class="details">Email</span>
                         <input type="text" placeholder="Digite seu email"  id="email" required>
                     </div>
                     <div class="input-box">
@@ -41,11 +41,11 @@
         function auth(){
             var email = document.getElementById("email").value;
             var senha = document.getElementById("password").value;
-            if(email=="helenapaniagua@gmail.com" && senha=="12345"){
+            if(email=="helena@gmail.com" && senha=="12345"){
                 window.location.assign("index1.html");
                 alert("Login realizado com sucesso");
             }
-            else if(email=="leonardogarcia@outlook.com" && senha=="12345"){
+            else if(email=="leonardo@gmail.com" && senha=="12345"){
                 window.location.assign("index1.html");
                 alert("Login realizado com sucesso")
             }
