--- a/index1.html
+++ b/index1.html
@@ -92,7 +92,7 @@
             <div class="content">
                 <h3>O que é a pegada de carbono?</h3>
                 <p>Uma pegada de carbono é o total de emissões de gases do efeito estufa causadas por um indivíduo, evento, organização, serviço, local ou produto, expresso em dióxido de carbono equivalente</p>
-                <p>A pegada de carbono visa reduzir o impacto sobre o meio ambiente, reduzindo o aquecimento global e mitigando as mudanças climáticas, já a pegada ecológica considera todos os possíveis impactos no meio ambiente.</p>
+                <p>A pegada de carbono visa reduzir o impacto sobre o meio ambiente, reduzindo o aquecimento global e mitigando as mudanças climáticas.</p>
                 <a href="question6.html" class="button">Calcule aqui o seu!</a>
             </div>
         </div>
